plugins {
    id 'com.android.application'
}

android {
    namespace 'com.studentplanner.studentplanner'


    compileSdk 34

    defaultConfig {
        applicationId "com.studentplanner.studentplanner"
        minSdk 34
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_16
        targetCompatibility JavaVersion.VERSION_16

    }
    viewBinding {
        enabled = true
    }
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'org.apache.commons:commons-text:1.8'
    implementation  'org.apache.commons:commons-lang3:3.9'
    // country call picker
    implementation 'com.hbb20:ccp:2.7.2'

    // easy permissions
    implementation 'pub.devrel:easypermissions:3.0.0'



}